--- a/static/styles.css
+++ b/static/styles.css
@@ -14,8 +14,7 @@ body {
 }
 
 .chat-container {
-    margin: auto;
-    height: 100vh;
+    height: calc(100vh - 71px);
     width: 100vw;
     display: flex;
     flex-direction: column;
